deployments/nexus/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: devtools
  labels:
    app: nexus-web
    group: service
spec:
  ports:
    - name: http-main
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: http-docker-rep
      port: 8123
      protocol: TCP
      targetPort: 8123
  selector:
    app: nexus
    group: service
  clusterIP: None
