deployments/nexus/nexus3-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service-headless
  namespace: devtools
spec:
  selector:
    app: nexus
    group: service
  clusterIP: None
  ports:
    - port: 8081
      targetPort: 8081
      name: web
    - port: 8082
      targetPort: 8082
      name: docker-private
    - port: 8083
      targetPort: 8083
      name: dockerhub-proxy
