deployments/nexus/nexus3-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service-nodeport
  namespace: devtools
spec:
  selector:
    app: nexus
    group: service
  clusterIP: None
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30081
      name: web
    - port: 8082
      targetPort: 8082
      nodePort: 30082
      name: docker-private
    - port: 8083
      targetPort: 8083
      nodePort: 30083
      name: dockerhub-proxy
