deployments/nexus/nexus3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: devtools
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8081'
spec:
  selector: 
    app: nexus-server
  type: NodePort  
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30081
