deployments/nexus/nexus-podservice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: nexus
  namespace: devtools
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nexus-pod-service
              servicePort: 8081
            path: /
    - http:
        paths:
          - backend:
              serviceName: nexus-pod-service
              servicePort: 8123
            path: /
  #tls:
   # - hosts:
    #    - nexus-docker.gotk8s
