deployments/nexus/nexus-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-service-ingress
  namespace: devtools
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nexus-service
              servicePort: 8081
            path: /
