deployments/nexus/nexus3-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: devtools
spec:
  rules:
    - host: nexus
      http:
        paths:
          - path: /
            backend:
              serviceName: nexus-service
              servicePort: 8081
    - host: docker.local
      http:
        paths:
          - path: /
            backend:
              serviceName: nexus-service
              servicePort: 8082
    - host: dockerhub.proxy
      http:
        paths:
          - path: /
            backend:
              serviceName: nexus-service
              servicePort: 8083
#  tls:
#    - hosts:
#        - nexus.local
